--- a/style.css
+++ b/style.css
@@ -303,5 +303,5 @@ table {}
 	#container {padding:0.5em; border-right-width:0.5em; border-left-width:0.5em}
 	#wrapContent {min-height:175em}
 	#content {margin-right:21.5em}
-	#sidebar {position:absolute; margin:0; top:0; right:0; bottom:0; width:20.2em; border-left:5px solid white}
+	#sidebar {position:absolute; margin:0; top:0; right:0; bottom:0; -webkit-box-sizing:border-box; -moz-box-sizing:border-box; box-sizing:border-box; width:21.5em; border-left:5px solid white}
 }
